# when2meet

./: .gitignore  README.md  asgi.py  conftest.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  frozen_config.py
app/queries/meeting/: create_meeting.edgeql  create_meeting_async_edgeql.py  get_meeting_by_url_code.edgeql  get_meeting_by_url_code_async_edgeql.py  models.py
app/services/: meeting_service_edgedb.py  meeting_service_mysql.py
app/tests/apis/v1/: test_meeting_router_edgedb.py  test_meeting_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py
app/utils/: base62.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m1xpqfd.edgeql
