[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["somy <fuureelf@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
